--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+#Ignore node_modules TOO BIG
+node_modules/
+bundle.js
+bundle.js.map
+
