--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:watch": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
@@ -34,5 +36,9 @@
   "bugs": {
     "url": "https://github.com/jkim617/EquityTrade/issues"
   },
-  "homepage": "https://github.com/jkim617/EquityTrade#readme"
+  "homepage": "https://github.com/jkim617/EquityTrade#readme",
+  "engines": {
+    "node": "12.5.0",
+    "npm": "6.9.0"
+  }
 }
