--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:watch": "webpack --watch --mode=development",
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "webpack": "webpack --watch --mode=development"
+    
   },
   "repository": {
     "type": "git",
