--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
@@ -24,8 +26,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack",
-    "webpack": "webpack --watch --mode=development"
-    
+    "start": "webpack --watch --mode=development"
   },
   "repository": {
     "type": "git",
