--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-loadingg": "^1.7.2",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "recharts": "^1.8.5",
